crates/sentinel-driver/tests/snapshots/ui__c52_secret_via_deref_place.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c52_secret_via_deref_place.sentinel\")"
---
sentinel::mir::secret_leak

  × a `secret` value reaches a conditional branch, which would leak it via
  │ timing
    ╭─[tests/ui/c52_secret_via_deref_place.sentinel:14:33]
 13 │         let r: &mut i64 = &mut n;
 14 │         *{ let t: secret bool = idb(a) && b; r } = 5;
    ·                                 ───┬──
    ·                                    ╰── secret value reaches the sink here
 15 │         0
    ╰────
  help: a secret must not influence control flow, a memory address, or a
        variable-latency instruction; restructure to be branch-free (e.g. a
        masked select) or `declassify` the value first if the leak is
        acceptable
