crates/sentinel-driver/tests/snapshots/ui__c52_secret_via_field.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c52_secret_via_field.sentinel\")"
---
sentinel::mir::secret_leak

  × a `secret` value reaches a conditional branch, which would leak it via
  │ timing
    ╭─[tests/ui/c52_secret_via_field.sentinel:11:5]
 10 │ fn leaky(v: S, other: secret bool) -> secret bool {
 11 │     v.b && other
    ·     ─┬─
    ·      ╰── secret value reaches the sink here
 12 │ }
    ╰────
  help: a secret must not influence control flow, a memory address, or a
        variable-latency instruction; restructure to be branch-free (e.g. a
        masked select) or `declassify` the value first if the leak is
        acceptable
