crates/sentinel-driver/tests/snapshots/ui__c52_secret_via_impl_method.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c52_secret_via_impl_method.sentinel\")"
---
sentinel::mir::secret_leak

  × a `secret` value reaches a conditional branch, which would leak it via
  │ timing
    ╭─[tests/ui/c52_secret_via_impl_method.sentinel:18:30]
 17 │     fn m(self: &Self, a: secret bool, b: secret bool) -> i64 {
 18 │         let t: secret bool = idb(a) && b;
    ·                              ───┬──
    ·                                 ╰── secret value reaches the sink here
 19 │         self.n
    ╰────
  help: a secret must not influence control flow, a memory address, or a
        variable-latency instruction; restructure to be branch-free (e.g. a
        masked select) or `declassify` the value first if the leak is
        acceptable
