crates/sentinel-driver/tests/snapshots/ui__c52_secret_via_index_place.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c52_secret_via_index_place.sentinel\")"
---
sentinel::mir::secret_leak

  × a `secret` value reaches a conditional branch, which would leak it via
  │ timing
    ╭─[tests/ui/c52_secret_via_index_place.sentinel:11:30]
 10 │     let mut x: [i64] = [0, 0];
 11 │     x[{ let t: secret bool = idb(a) && b; 0 }] = 5;
    ·                              ───┬──
    ·                                 ╰── secret value reaches the sink here
 12 │     x[0]
    ╰────
  help: a secret must not influence control flow, a memory address, or a
        variable-latency instruction; restructure to be branch-free (e.g. a
        masked select) or `declassify` the value first if the leak is
        acceptable
