crates/sentinel-driver/tests/snapshots/ui__c52_secret_via_match.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c52_secret_via_match.sentinel\")"
---
sentinel::mir::secret_leak

  × a `secret` value reaches a conditional branch, which would leak it via
  │ timing
    ╭─[tests/ui/c52_secret_via_match.sentinel:16:5]
 15 │     };
 16 │     m && s
    ·     ┬
    ·     ╰── secret value reaches the sink here
 17 │ }
    ╰────
  help: a secret must not influence control flow, a memory address, or a
        variable-latency instruction; restructure to be branch-free (e.g. a
        masked select) or `declassify` the value first if the leak is
        acceptable
