crates/sentinel-driver/tests/snapshots/ui__c52_secret_via_return_arm.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c52_secret_via_return_arm.sentinel\")"
---
sentinel::mir::secret_leak

  × a `secret` value reaches a conditional branch, which would leak it via
  │ timing
    ╭─[tests/ui/c52_secret_via_return_arm.sentinel:19:34]
 18 │         return v => {
 19 │             let t: secret bool = idb(a) && b;
    ·                                  ───┬──
    ·                                     ╰── secret value reaches the sink here
 20 │             v
    ╰────
  help: a secret must not influence control flow, a memory address, or a
        variable-latency instruction; restructure to be branch-free (e.g. a
        masked select) or `declassify` the value first if the leak is
        acceptable
