crates/sentinel-driver/tests/snapshots/ui__c55_index_assign_after_move.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c55_index_assign_after_move.sentinel\")"
---
sentinel::borrow::use_after_move

  × use of moved binding `v`
    ╭─[tests/ui/c55_index_assign_after_move.sentinel:10:5]
  9 │     let r: i64 = consume(v);
 10 │     v[0] = 99;
    ·     ┬
    ·     ╰── 
 11 │     r
    ╰────
