crates/sentinel-driver/tests/snapshots/ui__c5d3_vec_to_array_element_not_plain.snap
---
source: crates/sentinel-driver/tests/ui.rs
expression: "reject_stderr(\"c5d3_vec_to_array_element_not_plain.sentinel\")"
---
sentinel::types::vec_to_array_element_not_plain

  × `vec_to_array` is not supported for this element type
    ╭─[tests/ui/c5d3_vec_to_array_element_not_plain.sentinel:14:26]
 13 │     push(&mut v, H { e: E::B(1), k: 0 });
 14 │     let a = vec_to_array(v);
    ·                          ┬
    ·                          ╰── 
 15 │     len(a)
    ╰────
